[tool.poetry]
name = "hunter-copy"
version = "0.1.0"
description = "batch copier"
authors = [
    "Josh S Wilkinson <JoshsWilkinson@Outlook.com>",
]
readme = "README.md"
packages = [
    { include = "test" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "test\\test_main:run"
